# HelloCV

./: CMakeLists.txt  README.md  node_01.cpp  package.xml  技术报告.txt  校内赛技术报告.txt  第四次作业  链接汇总
G.E.M.战队_challenge/: CMakeLists.txt  README.md  package.xml
G.E.M.战队_challenge/config/: params.yaml
G.E.M.战队_challenge/launch/: shooter.launch.py  vision_level2.launch.py
G.E.M.战队_challenge/results/: G.E.M.战队_results.json  G.E.M.战队_results.json.sha256  TEAM16.2_results.json  TEAM16.2_results.json.sha256  TEAM16_results.json  TEAM16_results.json.sha256
G.E.M.战队_challenge/src/: shooter_node.cpp  vision_node.cpp
src/team16_pkg/: CMakeLists.txt  package.xml
src/team16_pkg/config/: stage1_params.yaml.yaml
src/team16_pkg/launch/: stage1_launch.xml
src/team16_pkg/src/: vision_node.cpp
